unpackaged/main/default/objects/n2de__Async_distribution_event__e/n2de__Async_distribution_event__e.object-meta.xml
<CustomObject>
    <description>Event sent when records are distributed or assigned asynchronously</description>
    <label>Async distribution event</label>
    <pluralLabel>Async distribution events</pluralLabel>
</CustomObject>