unpackaged/main/default/objects/n2de__Async_distribution_event__e/fields/n2de__First_record_sequence_number__c.field-meta.xml
<CustomField>
    <fullName>n2de__First_record_sequence_number__c</fullName>
    <label>Sequence number of the first record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>