unpackaged/main/default/objects/n2de__Async_distribution_event__e/fields/n2de__Object_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_name__c</fullName>
    <label>Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>