unpackaged/main/default/objects/n2de__Async_distribution_event__e/fields/n2de__Type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Type__c</fullName>
    <description>Distribution or assignment completed or other type of event</description>
    <label>Event type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>